# versionbump

./: .gitignore  .gitmodules  CMakeLists.txt
js/: .npmignore  Readme.md  package.json  version_config.json
js/lib/: index.js  index.js.map  index.ts
js/templates/: version.template.js
src/: array.c  array.h  main.c  main.cpp  pathiterator.h  version.template.h
